--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-core": "^6.10.4",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.9.0",
+    "cross-env": "^1.0.8",
+    "css-loader": "^0.23.1",
+    "expect": "^1.20.1",
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-redux": "5.1.1",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
