--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "node-sass": "^3.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
     "react-redux": "5.1.1",
+    "react-scripts": "3.0.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
+    "reflexbox": "^3.0.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1"
   },
