--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "babel-core": "^6.10.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -12,7 +13,8 @@
     "css-loader": "^0.23.1",
     "expect": "^1.20.1",
     "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "5.1.1",
@@ -20,7 +22,7 @@
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "reflexbox": "^3.0.1",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.1"
   },
   "scripts": {
