--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "babel-core": "^6.10.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -12,6 +13,7 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "expect": "^1.20.1",
+    "lodash": "^4.17.11",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^4.12.0",
     "node-sass-chokidar": "^1.3.5",
