added async actions and reducers

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-redux": "5.1.1",
     "react-scripts": "3.0.1",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
+    "redux-thunk": "^2.3.0",
     "reflexbox": "^3.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.13.1"
