--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass-chokidar": "^1.3.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-input-mask": "^2.0.4",
     "react-redux": "5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
