--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "expect": "^1.20.1",
+    "history": "^4.9.0",
     "lodash": "^4.17.11",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^4.12.0",
